recursion.cons.min.Min.scala.error
Compilation error:
Min:11: error: value tail is not a member of Int
 };else if (l.head.tail<=l.tail) {
                   ^